# python-migrations

./: .env.example  .gitignore  .pdm-python  LICENSE  README.md  command.py  config.py  context.py  countries.csv  init.py  main.py  migration.py  pyproject.toml  requirements.txt
commands/: 2023_09_26_093000_add_column_to_table.py  2023_09_28_145413_add_is_default_column_to_julyster_wallets_table.py  2023_10_18_113100_create_coinpayments_transactions_table.py  2023_11_08_create_finance_users.py  2023_11_13_fin_group_country_count.py  2023_11_15_151516_add_column_country_to_mail_templates.py  2023_12_01_call_status_logs_drop_not_null.py  2023_12_07_robert_real_tickets.py  2024_01_05_btrade2_real_tickets.py  2024_01_22_configurations_duplicates.py  2024_02_15_select_defaults.py  2024_02_26_decline_reasons.py  2024_05_31_generate_new_passwords.py  2024_07_04_ftd_count_per_fin_group.py  2024_07_04_pixel_ftd_sum.py  create_finance_users.py  example_2023_09_30.py
migrations/: 0000_00_00_000000_dummy_migration.py  2023_04_11_115922_add_disable_logging_column_to_mail_templates.py  2023_09_26_093000_add_column_to_table.py  2023_09_28_145413_add_is_default_column_to_julyster_wallets_table.py  2023_10_18_113100_create_coinpayments_transactions_table.py  2023_11_15_151516_add_column_country_to_mail_templates.py  2023_12_08_105509_add_self_status_column_to_communications.py  2023_12_25_101244_add_template_id_column_to_communications.py  2024_01_11_225400_add_customer_view_profile_kyc_info_permission.py  2024_01_25_184200_create_sms_requests_table.py  (+9 more)
utils/: colors.py  db.py  (+1 more)
